Get requests fixed Vessel model merged with VesselRecord model MapStruct is now used as converters